--- a/radio/index.html
+++ b/radio/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Radio Vibe</title>
+    <title>Radio Wiktowickie</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,8 +15,8 @@
         </div>
         
         <div class="info-section">
-            <h1 class="radio-name">Vibe FM</h1>
-            <p class="radio-slogan">Najlepsza muzyka w sieci</p>
+            <h1 class="radio-name">Radio Wiktowickie</h1>
+            <p class="radio-slogan">Najlepsze hity polecane przez członków Wiktowic!</p>
 
             <div class="current-track" id="current-track" aria-live="polite">
                 <img src="background_image.png" alt="Okładka" class="track-cover" id="track-cover">
