--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="https://rajman03.neocities.org/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://rajman03.neocities.org/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="https://rajman03.neocities.org/favicon-16x16.png">
-<link rel="manifest" href="https://rajman03.neocities.org/site.webmanifest">
+<link rel="manifest" href="https:/wiktowice.neocities.org/site.webmanifest">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Wiktowice - Miasto na Modach. Dołącz do serwera Minecraft na modach, sprawdź mapę, aktualności, bank i nasz Discord!">
 <title>Wiktowice - Miasto na Modach</title>
@@ -116,16 +116,16 @@ footer {
 <body>
 
 <header>
-    <img src="./Wiktowice - Miasto na Modach_files/logo.png" alt="Wiktowice Logo">
+    <img src="logo.png" alt="Wiktowice Logo">
     <nav>
-        <a href="https://rajman03.neocities.org/index.html">Strona główna</a>
-        <a href="https://rajman03.neocities.org/#o-serwerze">O serwerze</a>
-        <a href="https://rajman03.neocities.org/#aktualnosci">Aktualności</a>
-        <a href="https://wiktowice.neocities.org/bank">Bank</a>
+        <a href="https://wiktowice.github.io/index.html">Strona główna</a>
+        <a href="https://wiktowice.github.io/#o-serwerze">O serwerze</a>
+        <a href="https://wiktowice.github.io/#aktualnosci">Aktualności</a>
+        <a href="https://wiktowice.github.io/bank">Bank</a>
         <a href="https://dc.gg/Wiktowice">Discord</a>
-        <a href="https://wiktowice.neocities.org/idea">IDEA Centertel</a>
+        <a href="https://wiktowice.github.io/idea">IDEA Centertel</a>
         <a href="https://wiktowice.github.io/radio">Radio</a>
-        <a href="https://rajman03.neocities.org/admin.html" class="btn">🛠 Panel Admina</a>
+        <a href="https://wiktowice.github.io/admin.html" class="btn">🛠 Panel Admina</a>
     </nav>
 </header>
 
