--- a/bank/index.html
+++ b/bank/index.html
@@ -9,8 +9,8 @@
 <body>
 <div class="topbar">
     <img src="./Bank Wiktowice - Minecraft_files/logobank.png" class="logo">
-    <a href="https://wiktowice.neocities.org/" target="_blank">Strona główna</a>
-    <a href="https://rajman03.neocities.org/bank/admin.html">Admin Panel</a>
+    <a href="https://wiktowice.github.io/" target="_blank">Strona główna</a>
+    <a href="https://wiktowice.github.io/bank/admin.html">Admin Panel</a>
 </div>
 
 <div id="login-window" class="window animated-window">
