--- a/bank/index.html
+++ b/bank/index.html
@@ -4,11 +4,11 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bank Wiktowice - Minecraft</title>
-<link rel="stylesheet" href="./Bank Wiktowice - Minecraft_files/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="topbar">
-    <img src="./Bank Wiktowice - Minecraft_files/logobank.png" class="logo">
+    <img src="logobank.png" class="logo">
     <a href="https://wiktowice.github.io/" target="_blank">Strona główna</a>
     <a href="https://wiktowice.github.io/bank/admin.html">Admin Panel</a>
 </div>
@@ -29,7 +29,7 @@
 </div>
 
 <audio id="click-sound" src="click.wav"></audio>
-<script src="./Bank Wiktowice - Minecraft_files/script.js.pobierz"></script>
+<script src="script.js"></script>
 
 
 </body></html>
