--- a/admin.html
+++ b/admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- saved from url=(0036)https://rajman03.neocities.org/admin -->
-<html lang="pl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<html lang="pl">
+<head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Panel Admina - Wiktowice</title>
 <style>
@@ -113,15 +113,15 @@ footer{text-align:center;padding:15px;color:#fff;border-top:6px solid #654321;ba
     <button onclick="addNews()">📄 Generuj JSON</button>
 
     <h3>Wygenerowany JSON:</h3>
-    <textarea id="output" rows="10" readonly=""></textarea>
+    <textarea id="output" rows="10" readonly></textarea>
 
     <div id="home-btn">
-        <a href="https://rajman03.neocities.org/index.html" class="btn">🏠 Strona Główna</a>
+        <a href="index.html" class="btn">🏠 Strona Główna</a>
     </div>
 </div>
 
 <footer>
-    © 2025 Wiktowice - Panel Administratora
+    &copy; 2025 Wiktowice - Panel Administratora
 </footer>
 
 <script>
@@ -153,6 +153,5 @@ function addNews(){
 }
 </script>
 
-
-
-</body></html>
+</body>
+</html>
