--- a/bank/index.html
+++ b/bank/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- saved from url=(0036)https://rajman03.neocities.org/bank/ -->
-<html lang="pl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<html lang="pl">
+<head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bank Wiktowice - Minecraft</title>
 <link rel="stylesheet" href="style.css">
@@ -9,8 +9,8 @@
 <body>
 <div class="topbar">
     <img src="logobank.png" class="logo">
-    <a href="https://wiktowice.github.io/" target="_blank">Strona główna</a>
-    <a href="https://wiktowice.github.io/bank/admin.html">Admin Panel</a>
+    <a href="https://wiktowice.neocities.org" target="_blank">Strona główna</a>
+    <a href="admin.html">Admin Panel</a>
 </div>
 
 <div id="login-window" class="window animated-window">
@@ -30,6 +30,5 @@
 
 <audio id="click-sound" src="click.wav"></audio>
 <script src="script.js"></script>
-
-
-</body></html>
+</body>
+</html>
