--- a/bank/index.html
+++ b/bank/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="topbar">
     <img src="logobank.png" class="logo">
-    <a href="https://wiktowice.neocities.org" target="_blank">Strona główna</a>
+    <a href="https://wiktowice.github.io" target="_blank">Strona główna</a>
     <a href="admin.html">Admin Panel</a>
 </div>
 
@@ -32,3 +32,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
