--- a/idea/index.html
+++ b/idea/index.html
@@ -17,7 +17,7 @@
       <span class="brand-name">Idea Centertel</span>
     </div>
     <nav class="nav-actions">
-      <a href="https://wiktowice.neocities.org" class="home-link">
+      <a href="https://wiktowice.github.io" class="home-link">
         Strona główna
       </a>
     </nav>
