--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ tutaj
 </span> aby włączyć powiadomienia.
 </p>
     <!-- Przycisk Mody -->
-    <a href="https://tinyurl.com/WiktowiceMody" class="btn-mody">📦 Mody</a>
+    <a href="https://tinyurl.com/ModyDoWiktowic" class="btn-mody">📦 Mody</a>
 
     <!-- Informacja o IP i Discord -->
     <p style="margin-top:15px;">
@@ -265,4 +265,5 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
