--- a/ogolna_restrauracja/zamowienia.html
+++ b/ogolna_restrauracja/zamowienia.html
@@ -14,7 +14,7 @@
 <body>
     <div class="wrap">
         <div style="margin-bottom: 20px;">
-            <a href="https://rajman03.neocities.org"
+            <a href="https://wiktowice.github.io"
                 style="color: #fff; text-decoration: none; border-bottom: 1px dashed #fff;">&larr; Strona Główna</a>
         </div>
         <h1>Tablica Zamówień</h1>
