--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <nav>
             <a href="index.html" class="mc-btn">Start</a>
             <a href="#about" class="mc-btn">Serwer</a>
-            <a href="https://rajman03.neocities.org/bank" class="mc-btn gold">Bank</a>
-            <a href="https://rajman03.neocities.org/ogolna_restauracja/zamowienia" class="mc-btn">Restauracja</a>
-            <a href="https://wiktowice.github.io/radio" class="mc-btn purple">Radio</a>
+            <a href="https://wiktowice.github.io/bank" class="mc-btn gold">Bank</a>
+            <a href="https://wiktowice.github.io/ogolna_restauracja/zamowienia" class="mc-btn">Restauracja</a>
+            <a href="https://atmrrgrupa.github.io" class="mc-btn purple">ATM Rozrywka: REWORK</a>
             <a href="https://dc.gg/Wiktowice" target="_blank" class="mc-btn" style="background:#5865F2;">Discord</a>
             <a href="admin.html" class="mc-btn red">ADMIN</a>
         </nav>
@@ -114,5 +114,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
