--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' data: https://fonts.gstatic.com; media-src 'self'; connect-src 'self' http://localhost:3000 https://*.supabase.co https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net;">
+        content="default-src 'self'; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' data: https://fonts.gstatic.com; media-src 'self'; connect-src 'self' http://localhost:3000 https://*.supabase.co https://cdn.jsdelivr.net https://api.mcstatus.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net;">
     <title>Wiktowice Admin OS 2.1</title>
     <link rel="stylesheet" href="admin.css">
 </head>
@@ -15,9 +15,11 @@
     <!-- LOGIN SCREEN -->
     <div id="login-screen">
         <div class="login-card">
-            <h1 class="pixel-font" style="color: var(--primary); margin-bottom: 20px; font-size: 24px;">SYSTEM ADMIN
-            </h1>
-            <p style="margin-bottom: 30px; color: #888;">Wiktowice Secure Access Hub</p>
+            <div style="text-align:center; margin-bottom: 10px;">
+                <img src="logo.png" alt="Wiktowice" style="width: 260px; height: auto; image-rendering: pixelated;">
+            </div>
+            <p style="margin-bottom: 30px; color: #aaa; font-size: 14px; letter-spacing: 1px;">Wiktowice Secure Access
+                Hub</p>
             <div class="form-group">
                 <input type="password" id="login-pass" placeholder="Enter Access Code..."
                     style="text-align: center; font-size: 18px; letter-spacing: 2px;">
