--- a/idea/index.html
+++ b/idea/index.html
@@ -15,7 +15,7 @@
       <span class="brand-name">Idea Centertel</span>
     </div>
     <nav class="nav-actions">
-      <a href="https://rajman03.neocities.org" class="home-link">
+      <a href="../index.html" class="home-link">
         Strona główna
       </a>
     </nav>
