--- a/bank/index.html
+++ b/bank/index.html
@@ -61,7 +61,7 @@
             style="background:#8b8b8b; padding:10px; border:2px solid #373737; border-bottom-color:#fff; border-right-color:#fff;">
             <div style="font-size:10px; color:#333;">Aktualne Saldo:</div>
             <div style="font-size:24px; color:#006400; font-weight:bold; margin-top:5px;">
-                $<span id="user-saldo">0</span>
+                <span id="user-saldo">0</span>
             </div>
         </div>
 
@@ -82,5 +82,6 @@
     <script src="../supabase_config.js"></script>
     <script src="script.js"></script>
 </body>
+
 
 </html>
