--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="hero-bg"></div>
         <div class="hero-title-box">
             <h1>WIKTOWICE</h1>
-            <p style="color:#aaa; margin-top:10px; font-size:12px;">MIASTO NIEOGRANICZONYCH MOŻLIWOŚCI</p>
+            <p id="site-motd" style="color:#aaa; margin-top:10px; font-size:12px;">MIASTO NIEOGRANICZONYCH MOŻLIWOŚCI
+            </p>
         </div>
     </div>
 
