--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         <div class="hero-bg"></div>
         <div class="hero-title-box">
             <h1>WIKTOWICE</h1>
-            <p id="site-motd" style="color:#aaa; margin-top:10px; font-size:12px;">MIASTO NIEOGRANICZONYCH MOŻLIWOŚCI
-            </p>
+
         </div>
     </div>
 
@@ -83,11 +82,11 @@
                     </div>
                     <div
                         style="background:#000; border:2px solid #555; display:flex; align-items:center; justify-content:center;">
-                        <!-- Placeholder for dynmap or status image -->
                         <div style="text-align:center;">
                             <span style="font-size:40px;">🗺️</span><br>
                             <span style="font-size:10px; color:#666;">PODGLĄD MAPY</span><br>
-                            <a href="#" class="mc-btn" style="font-size:10px; margin-top:10px;">OTWÓRZ</a>
+                            <a href="http://wiktowice.falixsrv.me:20013/" target="_blank" class="mc-btn"
+                                style="font-size:10px; margin-top:10px;">OTWÓRZ</a>
                         </div>
                     </div>
                 </div>
