--- a/admin.html
+++ b/admin.html
@@ -226,6 +226,10 @@
                             <input type="text" id="conf-alert" placeholder="Czerwony pasek ostrzegawczy...">
                         </div>
                         <div class="form-group">
+                            <label>Discord Webhook URL</label>
+                            <input type="password" id="conf-webhook" placeholder="https://discord.com/api/webhooks/...">
+                        </div>
+                        <div class="form-group">
                             <label>Tryb Konserwacji</label>
                             <select id="conf-maint">
                                 <option value="false">🔴 Wyłączony (Strona działa)</option>
